updated submodule status of fdot

--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
                     <p class="nav-link">My other websites:</p>
                     <p class ="about-text"> <a href="https://github.com/westphallm1/">Github</a> </p>
                     <p class ="about-text"> <a href="https://bitbucket.org/dashboard/overview">Bitbucket</a> </p>
+                    <p class ="about-text"> <a href="https://westphallm1.github.io/Fdot/">F Dot</a>:
+                    an esoteric programming language loosely based off of x86 assembly with a javascript interpreter and
+                    html/jQuery editor.</p>
                 </div>
             </div> 
         </div>
