added some more websites to my CS section

--- a/index.html
+++ b/index.html
@@ -205,11 +205,27 @@
                     </p>
                     <hr></hr>
                     <p class="nav-link">My other websites:</p>
-                    <p class ="about-text"> <a href="https://github.com/westphallm1/">Github</a> </p>
-                    <p class ="about-text"> <a href="https://bitbucket.org/dashboard/overview">Bitbucket</a> </p>
-                    <p class ="about-text"> <a href="https://westphallm1.github.io/Fdot/">F Dot</a>:
-                    an esoteric programming language loosely based off of x86 assembly with a javascript interpreter and
-                    html/jQuery editor.</p>
+                    <ul>
+                      <li>
+                      <p class ="about-text"> <a href="https://github.com/westphallm1/">Github</a> </p>
+                      </li>
+                      <li>
+                      <p class ="about-text"> <a href="https://bitbucket.org/dashboard/overview">Bitbucket</a> </p>
+                      </li>
+                      <li>
+                      <p class ="about-text"> <a href="https://www.linkedin.com/in/matthew-westphall-4a4a64126">Linkedin</a> </p>
+                      </li>
+                      <li>
+                      <p class ="about-text"> <a href="https://westphallm1.github.io/Fdot/">F Dot</a>:
+                      an esoteric programming language loosely based off of x86 assembly with a javascript interpreter and
+                      html/jQuery editor (documentation is currently very sparse).</p>
+                      </li>
+                      <li>
+                      <p class ="about-text"> <a href="http://hotloops.herokuapp.com/">HotLoops</a>:
+                      A Django project that uses numpy and matplotlib to generate Pressure-Volume diagrams and their solutions.
+                      </p>
+                      </li>
+                    <ul>
                 </div>
             </div> 
         </div>
