added link to BROWSERONEBOWIE

--- a/index.html
+++ b/index.html
@@ -225,6 +225,12 @@
                       A Django project that uses numpy and matplotlib to generate Pressure-Volume diagrams and their solutions.
                       </p>
                       </li>
+                      <li>
+                      <p class ="about-text"> <a href="http://bowiebrowser.github.io/">BROWSERONEBOWIE</a>:
+                      Another David Bowie fansite, since one is never enough. Angular-based project that lets you sort through his albums and play them through
+                      the youtube javascript API.
+                      </p>
+                      </li>
                     <ul>
                 </div>
             </div> 
